# scratch-devices-link-lib

./: .gitignore  .npmignore  README.md  package.json  release.md
.github/workflows/: build.yml  release.yml
assets/: FutureAcademy.icns
docs/: RELEASE-v0.2.0.md  esp32-bin-flash.md  gui.md  installer-windows.md  tools-compression.md
firmwares/: README.md  README.txt
gui/: console-preload.js  console-renderer.js  console.css  console.html  index.html  main.js  preload.js  renderer.js  styles.css
gui/lib/: log-buffer.js
installer/: FutureAcademyLink.iss  WindyLink.iss  WindyLink.wxs
lib/monoblock-esp32-lib/: README.md
lib/monoblock-esp32-lib/scripts/: smoke.mjs
lib/monoblock-esp32-lib/src/client/: gateway-client.js
lib/monoblock-esp32-lib/src/core/: simple-emitter.js
lib/monoblock-esp32-lib/src/integrations/: windify.js
lib/monoblock-esp32-lib/src/transports/: vm-serial-transport.js
script/: apply-exe-icon.js  apply-gui-exe-icon.js  archive-tools.js  build-gui-darwin.js  build-gui-win.js  build-msi.js  build-setup.js  cargo.js  clean-dist.js  convert-gui-assets.js  download-firmwares.js  download-libraries.js  download-tools.js  ensure-tools.js  extract-tools-7z.js  fetch-local.js  generate-icns.js  generate-icon.js  generate-ota-manifest.js  libraries.json  package-app-mac.js  package-app-zip.js  package-dist-mac.js  package-dist.js  package-win-dist.js  prepare-installer-payload.js  prune-tools.js  publish-r2-ota.sh  publish-to-update-server.js  required-library-dirs.js  setup-arduino.js  sign-windows-artifacts.js  sync-logo-assets.js  sync-windify-lib.js  unblock-installer.ps1  update-tools.js  verify-required-libraries.js
script/lib/: clean-locked-dir.js  electron-output.js  stage-runtime-assets.js
shell/: Cargo.toml  build.rs  icon.rc
shell/src/: ansi.rs  download.rs  main.rs  paths.rs  progress.rs  serial.rs  server.rs  toolchain.rs  update.rs  usb_id.rs
shell/src/upload/: arduino.rs  esp32.rs  limits.rs  mod.rs
shell/src/ws/: mod.rs  serialport_session.rs  session.rs
src/: index.js  start-link-server.js
src/lib/: open-url.js  runtime-paths.js  serial-device-list.js  toolchain-setup.js
src/lib/monoblock-esp32-lib/: package.json
src/lib/monoblock-esp32-lib/src/: index.d.ts  index.js
src/lib/monoblock-esp32-lib/src/core/: errors.js
src/lib/monoblock-esp32-lib/src/transports/: http-transport.js
src/session/: serialport.js
src/upload/: arduino.js  esp32.js  upload-limits.js
src_backup/: index.js  start-link-server.js
src_backup/lib/: update-client.js  usb-id.js
src_backup/upload/: arduino.js  esp32.js
test/: start-multi-server.js  test-esp32-flash.js
