[package]
name = "future-academy-tray"
version = "2.0.5"
edition = "2021"
description = "Future Academy Link tray shell + local hardware link server (single binary, no Node runtime)."
license = "MIT"

[[bin]]
name = "FutureAcademyTray"
path = "src/main.rs"

[dependencies]
# Tray UI (main-thread owned event loop)
tray-icon = "0.24"
muda = "0.19"
tao = "0.35"
image = { version = "0.25", features = ["png"], default-features = false }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime + HTTP/WS server
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
bytes = "1"

# Serial port
serialport = "4"

# HTTP client (toolchain download). ureq kept for the synchronous 2s tray poll thread.
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
ureq = { version = "2.10", features = ["json"] }

# Pure-Rust 7z extraction for the toolchain archive. Supports the modern
# LZMA2 + Delta method used by the release .7z — no external 7zr/7-Zip needed.
sevenz-rust2 = { version = "0.21", default-features = false, features = ["util"] }
sha2 = "0.10"

# Misc
base64 = "0.22"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
open = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
time = { version = "0.3", features = ["formatting", "local-offset"] }
indicatif = "0.17"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
strip = true
# NOTE: panic = "abort" removed — tokio task isolation relies on unwinding so a
# single connection panic does not abort the whole tray process.
