[package]
name = "future-academy-tray"
version = "2.0.14"
edition = "2021"
description = "Future Academy Link tray shell + local hardware link server (single binary, no Node runtime)."
license = "MIT"

[[bin]]
name = "FutureAcademyTray"
path = "src/main.rs"

[dependencies]
# Tray UI (main-thread owned event loop)
tray-icon = "0.24"
muda = "0.19"
tao = "0.35"
image = { version = "0.25", features = ["png"], default-features = false }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime + HTTP/WS server
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
bytes = "1"

# Serial port
serialport = "4"

# HTTP client (toolchain download). ureq kept for the synchronous 2s tray poll thread.
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
ureq = { version = "2.10", features = ["json"] }

# Archive extraction
sevenz-rust2 = { version = "0.21", default-features = false, features = ["util"] }
flate2 = "1"
bzip2 = "0.4"
tar = "0.4"
zip = "2"

# Hashing
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Version comparison
semver = "1"

# Time / formatting
time = { version = "0.3", features = ["formatting", "local-offset"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }

# CLI progress UI (tool download)
indicatif = "0.17"

# Misc
uuid = { version = "1", features = ["v4"] }
open = "5"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
strip = true
# NOTE: panic = "abort" removed — tokio task isolation relies on unwinding so a
# single connection panic does not abort the whole tray process.
